# LambdaClass-ZKHackaton

./: .gitmodules  README.md
YTP-Contracts/: package-lock.json  package.json
YTP-Contracts/contracts/: Lock.sol
ZKProofs/liquidity-lock-proof/: Cargo.toml
ZKProofs/liquidity-lock-proof/core/: Cargo.toml
ZKProofs/liquidity-lock-proof/core/src/: lib.rs
ZKProofs/liquidity-lock-proof/host/: Cargo.toml
ZKProofs/liquidity-lock-proof/host/src/: main.rs
ZKProofs/liquidity-lock-proof/methods/guest/: Cargo.toml
ZKProofs/liquidity-lock-proof/methods/guest/src/: main.rs
ZKProofs/look-liquidity-proof/: Cargo.toml  README.md
ZKProofs/look-liquidity-proof/methods/guest/src/: main.rs
ZKProofs/repay-proof-RPC-SEPOLIA/: README.md  a.json
ZKProofs/repay-proof-RPC-SEPOLIA/host/src/: main.rs
ZKProofs/repay-proof-RPC-SEPOLIA/methods/: Cargo.toml
ZKProofs/repay-proof-RPC-SEPOLIA/methods/guest/src/: main.rs
ZKProofs/repay-proof/core/src/: lib.rs
ZKProofs/repay-proof/host/: Cargo.toml
ZKProofs/repay-proof/host/src/: main.rs
ZKProofs/repay-proof/methods/: Cargo.toml
ZKProofs/repay-proof/methods/guest/: Cargo.toml
ZKProofs/repay-proof/methods/guest/src/: main.rs
hello_world/host/src/: main.rs
ytp_foundry/broadcast/CollateralDepositProof.s.sol/300/: run-latest.json
ytp_foundry/script/: CollateralDepositProof.s.sol
ytp_foundry/src/: .gitmodules  CollateralDepositProof.sol  Counter.sol  DummyContract.sol
