[package]
name = "liquidity_lock_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
proof_core = { path = "../../core" }
risc0-steel ={version = "0.11.1"}

alloy-sol-types = "0.7"
alloy-primitives = "0.7"
revm = { version = "9.0" , default-features = false, features = ['std'] }